# gitbacklist

./: README.md  pyproject.toml
src/gitbacklist/: __init__.py
